[gd_scene load_steps=7 format=3 uid="uid://d2b2tuk47rndw"]

[ext_resource type="Script" path="res://src/hatbot/enemies/Soldier.gd" id="1_ca64f"]
[ext_resource type="SpriteFrames" uid="uid://tehrf3qb1t4c" path="res://src/hatbot/enemies/SoldierSpriteFrames.tres" id="1_cvejl"]
[ext_resource type="PackedScene" path="res://src/hatbot/enemies/machine/EnemyMachine.tscn" id="3_22wf2"]
[ext_resource type="Texture2D" uid="uid://dmx8juk2455h4" path="res://assets/hatbot/light64px1.png" id="4_f6c4x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cd88"]
size = Vector2(12, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2i04"]
size = Vector2(18, 16)

[node name="Soldier" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_ca64f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5cd88")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = ExtResource("1_cvejl")
animation = &"idle"
autoplay = "idle"

[node name="Machine" parent="." instance=ExtResource("3_22wf2")]

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-7, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_h2i04")
metadata/_edit_lock_ = true

[node name="FrontRay" type="RayCast2D" parent="."]
position = Vector2(-5, 0)
target_position = Vector2(0, 12)

[node name="LowLineOfSight" type="RayCast2D" parent="."]
position = Vector2(0, 8)
rotation = 1.57079
target_position = Vector2(0, 40)
collision_mask = 2

[node name="HighLineOfSight" type="RayCast2D" parent="."]
position = Vector2(0, -4)
rotation = 1.57079
target_position = Vector2(0, 40)
collision_mask = 2

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
texture = ExtResource("4_f6c4x")
